WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
41343
REGRESSION: [Chromium] <progress> appearance on windows looks not good
https://bugs.webkit.org/show_bug.cgi?id=41343
Summary
REGRESSION: [Chromium] <progress> appearance on windows looks not good
Hajime Morrita
Reported
2010-06-29 05:11:26 PDT
from
http://code.google.com/p/chromium/issues/detail?id=47734
Attachments
patch v0
(3.05 KB, patch)
2010-06-29 05:26 PDT
,
Hajime Morrita
tkent
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Hajime Morrita
Comment 1
2010-06-29 05:26:14 PDT
Created
attachment 60012
[details]
patch v0
Hajime Morrita
Comment 2
2010-06-29 05:27:28 PDT
"git blame" says it has been wrong at star t time. I suspect that some other change unveils this bug.
Kent Tamura
Comment 3
2010-06-29 05:37:21 PDT
Comment on
attachment 60012
[details]
patch v0 OK
Hajime Morrita
Comment 4
2010-06-29 18:30:15 PDT
Committed
r62156
: <
http://trac.webkit.org/changeset/62156
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug