2010-06-29  MORITA Hajime  <morrita@google.com>

Reviewed by Kent Tamura.

        REGRESSION: [Chromium] <progress> appearance on windows looks not good
        https://bugs.webkit.org/show_bug.cgi?id=41343

        Skipped a test with outdated expectation. We need to rebaseline it.

        * platform/chromium/test_expectations.txt:
2010-06-29  MORITA Hajime  <morrita@google.com>

        Reviewed by Kent Tamura.

        REGRESSION: [Chromium] <progress> appearance on windows looks not good
        https://bugs.webkit.org/show_bug.cgi?id=41343

        RenderThemeChromiumWin::paintProgressBar() should return false,
        which indicates the widget is painted.

        Test: fast/dom/HTMLProgressElement/progress-element.html
              * rebaselined with a wrong expectation.

        * rendering/RenderThemeChromiumWin.cpp:
        (WebCore::RenderThemeChromiumWin::paintProgressBar):

Canonical link: https://commits.webkit.org/53112@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@62156 268f45cc-cd09-0410-ab3c-d52691b4dbfc